[tool.poetry]
name = "api-base"
version = "0.1.0"
description = ""
authors = ["Huyaro <huyaro.dev@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.2"
sqlalchemy = "^2.0.36"
asyncpg = "^0.30.0"
ujson = "^5.10.0"
uvicorn = "^0.32.0"
redis = "^5.1.1"
arrow = "^1.3.0"
greenlet = "^3.1.1"
loguru = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
preview = true
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"